[gd_scene load_steps=7 format=3 uid="uid://7jeufek082os"]

[ext_resource type="Texture2D" uid="uid://tfc5ssvpiowj" path="res://Global Assets/Graphics/UI Graphics/StatusBoxBlank.png" id="1_p4hnp"]
[ext_resource type="Script" path="res://Scenes/Battle/StatusBox.gd" id="2_7i4dh"]
[ext_resource type="Texture2D" uid="uid://b453k3m6wcbfo" path="res://Global Assets/Graphics/UI Graphics/HeartContainers.png" id="3_q2bd5"]
[ext_resource type="Texture2D" uid="uid://cpsxhd42h2dfo" path="res://Global Assets/Graphics/UI Graphics/HeartContainerFills.png" id="3_wjl2y"]
[ext_resource type="Texture2D" uid="uid://b867oac62lde1" path="res://Global Assets/Graphics/UI Graphics/MoveContainers.png" id="5_dcu11"]
[ext_resource type="Texture2D" uid="uid://7rnrj2sx1wco" path="res://Global Assets/Graphics/UI Graphics/MoveContainersFills.png" id="5_twihv"]

[node name="BattleBook" type="Node2D"]

[node name="StatusBox" type="Sprite2D" parent="."]
position = Vector2(207, 96)
texture = ExtResource("1_p4hnp")
script = ExtResource("2_7i4dh")

[node name="HeartFill" type="Sprite2D" parent="StatusBox"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_wjl2y")
hframes = 7
frame = 4

[node name="HeartContainer" type="Sprite2D" parent="StatusBox"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_q2bd5")
hframes = 7
frame = 4

[node name="MoveFill" type="Sprite2D" parent="StatusBox"]
position = Vector2(123, 10)
texture = ExtResource("5_twihv")
hframes = 9

[node name="MoveContainer" type="Sprite2D" parent="StatusBox"]
position = Vector2(123, 10)
texture = ExtResource("5_dcu11")
hframes = 9

[node name="SpeedDisplay" type="Label" parent="StatusBox"]
offset_left = 111.0
offset_top = -12.0
offset_right = 136.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBox2" type="Sprite2D" parent="."]
position = Vector2(208, 251)
texture = ExtResource("1_p4hnp")
script = ExtResource("2_7i4dh")

[node name="HeartFill" type="Sprite2D" parent="StatusBox2"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_wjl2y")
hframes = 7
frame = 4

[node name="HeartContainer" type="Sprite2D" parent="StatusBox2"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_q2bd5")
hframes = 7
frame = 4

[node name="MoveFill" type="Sprite2D" parent="StatusBox2"]
position = Vector2(123, 10)
texture = ExtResource("5_twihv")
hframes = 9

[node name="MoveContainer" type="Sprite2D" parent="StatusBox2"]
position = Vector2(123, 10)
texture = ExtResource("5_dcu11")
hframes = 9

[node name="SpeedDisplay" type="Label" parent="StatusBox2"]
offset_left = 111.0
offset_top = -12.0
offset_right = 136.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBox3" type="Sprite2D" parent="."]
position = Vector2(1072, 96)
texture = ExtResource("1_p4hnp")
script = ExtResource("2_7i4dh")

[node name="HeartFill" type="Sprite2D" parent="StatusBox3"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_wjl2y")
hframes = 7
frame = 4

[node name="HeartContainer" type="Sprite2D" parent="StatusBox3"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_q2bd5")
hframes = 7
frame = 4

[node name="MoveFill" type="Sprite2D" parent="StatusBox3"]
position = Vector2(123, 10)
texture = ExtResource("5_twihv")
hframes = 9

[node name="MoveContainer" type="Sprite2D" parent="StatusBox3"]
position = Vector2(123, 10)
texture = ExtResource("5_dcu11")
hframes = 9

[node name="SpeedDisplay" type="Label" parent="StatusBox3"]
offset_left = 111.0
offset_top = -12.0
offset_right = 136.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBox4" type="Sprite2D" parent="."]
position = Vector2(1072, 251)
texture = ExtResource("1_p4hnp")
script = ExtResource("2_7i4dh")

[node name="HeartFill" type="Sprite2D" parent="StatusBox4"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_wjl2y")
hframes = 7
frame = 4

[node name="HeartContainer" type="Sprite2D" parent="StatusBox4"]
visible = false
position = Vector2(-145, -1)
texture = ExtResource("3_q2bd5")
hframes = 7
frame = 4

[node name="MoveFill" type="Sprite2D" parent="StatusBox4"]
position = Vector2(123, 10)
texture = ExtResource("5_twihv")
hframes = 9

[node name="MoveContainer" type="Sprite2D" parent="StatusBox4"]
position = Vector2(123, 10)
texture = ExtResource("5_dcu11")
hframes = 9

[node name="SpeedDisplay" type="Label" parent="StatusBox4"]
offset_left = 111.0
offset_top = -12.0
offset_right = 136.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 1
vertical_alignment = 1
